Fix/2817 [tag-list] fix flickering of elements inside when zooming

--- a/packages/components/combobox/src/combobox.scss
+++ b/packages/components/combobox/src/combobox.scss
@@ -41,7 +41,7 @@ sl-text-field {
 }
 
 sl-tag-list {
-  flex: 1;
+  flex: 0 1 66%;
   max-inline-size: 66%;
   min-inline-size: 0;
   position: relative;
